--- a/branches/MonoGame/Projektimallit/Android/FysiikkaPeliAndroid_Physics2d/FysiikkaPeli.csproj
+++ b/branches/MonoGame/Projektimallit/Android/FysiikkaPeliAndroid_Physics2d/FysiikkaPeli.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
+    <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\Values\Strings.xml" />
