--- a/Projektimallit/Android/TasohyppelypeliAndroid/Tasohyppelypeli.csproj
+++ b/Projektimallit/Android/TasohyppelypeliAndroid/Tasohyppelypeli.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
+	<None Include="Properties\AndroidManifest.xml" />
     <None Include="Assets\AboutAssets.txt" />
   </ItemGroup>
   <ItemGroup>
